NIFI-15151 Refactored Processor Tests using Shared Database Service
- Added AbstractDatabaseConnectionServiceTest with lifecycle handling

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #10474.